added handlers for user and images
