# server/docs/swagger.yaml
@@ -1,5 +1,28 @@
 basePath: /
 definitions:
+  image.CreateImageRequest:
+    properties:
+      url:
+        type: string
+    type: object
+  image.GetImageResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      updated_at:
+        type: string
+      url:
+        type: string
+      user:
+        type: string
+    type: object
+  image.UpdateImageRequest:
+    properties:
+      url:
+        type: string
+    type: object
   user.CreateUserRequest:
     properties:
       name:
@@ -45,6 +68,150 @@ info:
   title: MyPic API
   version: "1.0"
 paths:
+  /api/v1/image:
+    get:
+      consumes:
+      - application/json
+      description: Get all images in the database
+      parameters:
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: number
+      - default: 10
+        description: Number of images per page
+        in: query
+        name: limit
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/image.GetImageResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get all images
+      tags:
+      - Images
+    post:
+      consumes:
+      - application/json
+      description: Create a new image with the provided details
+      parameters:
+      - description: Image details
+        in: body
+        name: image
+        required: true
+        schema:
+          $ref: '#/definitions/image.CreateImageRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/image.GetImageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new image
+      tags:
+      - Images
+  /api/v1/image/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an existing image by ID
+      parameters:
+      - description: Image ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete an existing image
+      tags:
+      - Images
+    get:
+      consumes:
+      - application/json
+      description: Get an image by its unique ID
+      parameters:
+      - description: Image ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/image.GetImageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get an image by ID
+      tags:
+      - Images
+    put:
+      consumes:
+      - application/json
+      description: Update an existing image with the provided details
+      parameters:
+      - description: Image ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated image details
+        in: body
+        name: image
+        required: true
+        schema:
+          $ref: '#/definitions/image.UpdateImageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/image.GetImageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update an existing image
+      tags:
+      - Images
   /api/v1/user:
     post:
       consumes:
